change on templates

--- a/templates/ureport/home.html
+++ b/templates/ureport/home.html
@@ -14,8 +14,84 @@
     </script>
 {% endblock %}
 {% block content %}
+
+
 <div id="viz">
 </div>
+
+<div id="sondages">
+	      <div class="map">
+		  
+		  
+	          <img src="{{ STATIC_URL }}images/Bu.png"> 
+	          
+	          
+	    
+	          
+	            
+	
+	
+	      </div>
+			<div class="sondages_header">
+			 	Sondages Top
+			</div>
+			<div class="news_column">
+				<span> 16/Mar/2013 - <a href=""> voir les resultats</a></span><br />
+					Si vous cherchez de l'eau d'un robinet puits,
+					forage ou de la communaute,est-il travailler aujourd'hui?
+					OUI ou Non et inclure le non </br>du Village
+			</div>
+			<div class="sondages_sep">&nbsp;</div>
+			<div class="news_column">
+				<span> 16/Mar/2013 - <a href=""> voir les resultats</a></span><br />
+					Si vous cherchez de l'eau d'un robinet puits,
+					forage ou de la communaute,est-il travailler aujourd'hui?
+					OUI ou Non et inclure le non </br>du Village
+			</div>
+			<div class="sondages_sep">&nbsp;</div>
+			
+		</div>
+		<div class="past_results">
+			<a href=""> Pour afficher plus de résultats, cliquez ici</a></p>
+		</div>
+	    <div id="footer">
+	    	<div class="sponsors_header" >
+	    		Partenaires		 
+	    	</div>
+	      <div class="sponsors_logos">
+	           <img src="{{ STATIC_URL }}ureport/images/unicef_logo.png" alt="unicef logo" />
+	           <img src="{{ STATIC_URL }}ureport/images/gem_logo.png" alt="gem logo" />
+	           <img src="{{ STATIC_URL }}ureport/images/croix_rouge_burundi.png" alt="red cross logo" />
+	           <img src="{{ STATIC_URL }}ureport/images/scouts_burundi.png" alt="scouts logo" />
+	           <img src="{{ STATIC_URL }}ureport/images/girl_scouts.png" alt="girl guides logo" />     
+	       </div>
+	       <div id="activities">
+			<div class="activities_header">
+			 	ACTIVITÉS SUR UREPORT
+			</div>
+			<div class="activities_column">
+				<span> ceci est une version de Lorem Ipsum</span><br />
+					<a href="{{ STATIC_URL }}ureport/images/messi.jpg">
+						<img src="{{ STATIC_URL }}ureport/images/messi_p.png" width="30%"  align="left" />
+					</a>
+					Si vous cherchez de l'eau d'un robinet puits,
+				forage ou de la communaute,est-il travailler </br>aujourd'hui?
+				OUI ou Non et inclure le non du Village <a href="">plus...</a>
+			</div>
+			<div class="activities_sep">&nbsp;</div>
+			<div class="activities_column">
+				<span> ceci est une version de Lorem Ipsum</span><br />
+					<a href="{{ STATIC_URL }}ureport/images/messi.jpg">
+						<img src="{{ STATIC_URL }}ureport/images/messi_p.png" width="30%"  align="left" />
+					</a>
+					Si vous cherchez de l'eau d'un robinet puits,
+				forage ou de la communaute,est-il travailler </br>aujourd'hui?
+				OUI ou Non et inclure le non du Village <a href="">plus...</a>
+			</div>
+			<div class="activities_sep">&nbsp;</div>
+			
+		</div>
+	  </div>  
 <div class="scrolltop">
 <span>PREVIOUS POLLS</span>
 </div>
