--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Ureport - {% block page_title %}Voice Matters{% endblock %}</title>
+<html lang="en"><head><title>Ureport - {% block page_title %}Voice Matters{% endblock %}</title>
 
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}ureport/stylesheets/base.css">
+
+    
+
+    <link rel="stylesheet" type="text/css" href="%7B%7B%20STATIC_URL%20%7D%7Dureport/stylesheets/base.css">
  
 
 
-    {% block stylesheets %}
-         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}rapidsms/stylesheets/modules.css" />
+    <link type="text/css" rel="stylesheet" href="%7B%7B%20STATIC_URL%20%7D%7Drapidsms/stylesheets/modules.css"></head><body>{% block stylesheets %}
+         
 
     {% endblock %}
-  <script type="text/javascript" src="{{ STATIC_URL }}ureport/javascripts/jquery.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}ureport/javascripts/ureport.min.js?11"></script>
+  <script type="text/javascript" src="%7B%7B%20STATIC_URL%20%7D%7Dureport/javascripts/jquery.js"></script>
+<script type="text/javascript" src="%7B%7B%20STATIC_URL%20%7D%7Dureport/javascripts/ureport.min.js?11"></script>
 
 {% block top_js %}
 
@@ -34,13 +35,15 @@
             </script>
 
 
-</head>
-<body>
-    <div class="container" style="background-color:#ffffff;">
-        <div class="banner">
+
+    <div style="background-color: rgb(255, 255, 255); width: 1047px;" class="container">
+        <div style="height: 95px;" class="banner">
             <a href="/">
             <span class="brand">UReport</span>
             <span class="tagline">VOICE MATTERS</span>
+            
+            </a></div>
+<a href="/">              
             </a>
             {% load humanize %}
             <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> members to date</span>
@@ -49,15 +52,15 @@
         <div class="subnav">
 
           <ul class="nav nav-pills">
-           <li class="first"><a href="/">HOME</a></li>
+           <li class="activate"><a href="/">HOME</a></li>
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
-	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
-	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
-	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
-                         <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
-                        <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
-                        <li><a href="{% url alerts %}">Real Time</a></li>
+	                   <li><a href="%7B%%20url%20ureport-polls%20%%7D">POLL ADMIN</a></li>
+	                   <li><a href="%7B%%20url%20messagelog%20%%7D">MESSAGE LOG</a></li>
+	                   <li><a href="%7B%%20url%20ureport-contact%20%%7D">UREPORTERS</a></li>
+	                   <li><a href="%7B%%20url%20flaggedmessages%20%%7D">FLAGGED MESSAGES</a></li>
+                      <li><a href="%7B%%20url%20mp_dashboard%20%%7D">MP BARAZA</a></li>
+                       <li><a href="%7B%%20url%20classifier%20%%7D">MESSAGE CLASSIFICATION</a></li>
+                       <li><a href="%7B%%20url%20alerts%20%%7D">Real Time</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
@@ -72,11 +75,11 @@
 	    <div class="footer">
 	       <div class="sponsors">
 	           Supported by:
-	           <img src="{{ STATIC_URL }}ureport/images/unicef_logo.png"/>
-	           <img src="{{ STATIC_URL }}ureport/images/brac_logo.png"/>
-	           <img src="{{ STATIC_URL }}ureport/images/scouts_logo.png"/>
-	           <img src="{{ STATIC_URL }}ureport/images/cou_logo.png"/>
-	           <img src="{{ STATIC_URL }}ureport/images/gem_logo.png"/>
+	           <img src="%7B%7B%20STATIC_URL%20%7D%7Dureport/images/unicef_logo.png">
+	           <img src="%7B%7B%20STATIC_URL%20%7D%7Dureport/images/brac_logo.png">
+	           <img src="%7B%7B%20STATIC_URL%20%7D%7Dureport/images/scouts_logo.png">
+	           <img src="%7B%7B%20STATIC_URL%20%7D%7Dureport/images/cou_logo.png">
+	           <img src="%7B%7B%20STATIC_URL%20%7D%7Dureport/images/gem_logo.png">
 	       </div>
 	       <div class="footerlinks">
 	           <div class="nav-bottom">
@@ -88,26 +91,26 @@
 	                <!-- <li><a href="#">SITE MAP</a></li>
 	                <li><a href="#">CONTACT US</a></li> -->
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
-	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
-	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
-	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
-                        <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
-                         <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
-                    <li><a href="{% url alerts %}">Real Time</a></li>
+	                   <li><a href="%7B%%20url%20ureport-polls%20%%7D">POLL ADMIN</a></li>
+	                   <li><a href="%7B%%20url%20messagelog%20%%7D">MESSAGE LOG</a></li>
+	                   <li><a href="%7B%%20url%20ureport-contact%20%%7D">UREPORTERS</a></li>
+	                   <li><a href="%7B%%20url%20flaggedmessages%20%%7D">FLAGGED MESSAGES</a></li>
+                        <li><a href="%7B%%20url%20mp_dashboard%20%%7D">MP BARAZA</a></li>
+                         <li><a href="%7B%%20url%20classifier%20%%7D">MESSAGE CLASSIFICATION</a></li>
+                    <li><a href="%7B%%20url%20alerts%20%%7D">Real Time</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
                 </ul>
 	           </div>
-	           <p>Copyright &copy; 2010 - 2011 UNICEF et al.</p>
+	           <p>Copyright © 2010 - 2013 UNICEF et al.</p>
 	           <p>RapidSMS and Ureport are available under the BSD license.</p>
 	        </div>
 	    </div>
 
 
-        <script type="text/javascript" src="{{ STATIC_URL }}rapidsms/javascripts/collapse.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}ureport/javascripts/ureport_extras.min.js?1"></script>
+        <script type="text/javascript" src="%7B%7B%20STATIC_URL%20%7D%7Drapidsms/javascripts/collapse.js"></script>
+        <script type="text/javascript" src="%7B%7B%20STATIC_URL%20%7D%7Dureport/javascripts/ureport_extras.min.js?1"></script>
     {% block javascripts %}
     {% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -117,6 +120,5 @@
     {% block extra_js %}
 
 {% endblock %}
-    </div>
-</body>
-</html>
+    
+</body></html>
