How it may work

--- a/templates/ureport/about.html
+++ b/templates/ureport/about.html
@@ -30,13 +30,13 @@
 		</p>
 		
 		<p>
-			Le premier paragraphe.
+			Ureport fournit un moyen economique de rassembler et visualiser des informations sur et les opinions de la communaute en temps reel.Co-developpe avec un eventail de groupes d'utilisateurs,cet outil polyvalent contient une serie de caracteristiques et applications qui assurent la valeur pour tous les groupes d'utilisateurs.
 		</p>
 		<p>
 			Le second paragraphe.
 		</p>
 		
-		<img src="{{ STATIC_URL }}images/Burundi.png">
+		<img src="{{ STATIC_URL }}images/Bu.png">
 
 	</div>
 	
