--- a/templates/ureport/how_to_join.html
+++ b/templates/ureport/how_to_join.html
@@ -21,10 +21,9 @@
 	<div class="step_2 step">
 		<p class="step_txt"><span class="step_name">
 		Step 2 </span>
+		Des questions de sondage hebdomadaire sont envoyees aux Ureporters enregistres via leur telephone portable.
 
-		You will receive a greeting message and a series of quetions , to find out more about you
-		(Ureport needs to know your District but all other quetions are optional)
-
+		
 		</p>
 		<img src="{{ STATIC_URL }}images/step2.png">
 	</div>
@@ -32,8 +31,9 @@
 
 
     <div class="step_1 step">
-		<p class="step_txt"><span class="step_name" >Step 1 </span>Text the word Join to 8500
-		- all Ureport SMSs are free!
+		<p class="step_txt"><span class="step_name" >Step 1 </span>
+		Un volontaire communautaire envoie par texto"REJOINDRE" au 132 et repond a une serie de questions pour devenir un Ureporter enregistre.
+		
 
 		</p>
 		<img src="{{ STATIC_URL }}images/step1.png">
@@ -45,7 +45,7 @@
 		<p class="step_txt"><span class="step_name">
 		Step 4 </span>
 
-		Un volontaire communautaire envoie par.
+		Touts les SMS envoyes par les Ureporters interagissent avec une plate-forme informatique(a travers une application technique appelee "Rapid SMS"),qui analyse,carthographie et visualise l'information.
 		</p>
 		<img src="{{ STATIC_URL }}images/step4.png">
 	</div>
@@ -54,7 +54,7 @@
 	<div class="step_3 step">
 		<p class="step_txt"><span class="step_name" >
 		Step 3 </span>
-		After you answer the quetions about you, you are a member of Ureport!
+		Les Ureporters peuvent partager l'information provenant de leur communaute en reponse aux questions du sondage en envoyant des SMS gratuits au 132. 
 		</p>
 		<img src="{{ STATIC_URL }}images/step3.png">
 	</div>
