--- a/templates/ureport/home.html
+++ b/templates/ureport/home.html
@@ -23,15 +23,19 @@
 	      <div class="map">
 		  
 		  
-	          <img src="{{ STATIC_URL }}images/Bu.png"> 
-	          
-	          
-	    
-	          
-	            
-	
+	          <img src="{{ STATIC_URL }}images/Burundi.png"> 
+
 	
 	      </div>
+	      
+	      <p>
+	      
+	      
+	      
+	      
+	      
+	      </p>
+	      
 			<div class="sondages_header">
 			 	Sondages Top
 			</div>
@@ -48,16 +52,39 @@
 					forage ou de la communaute,est-il travailler aujourd'hui?
 					OUI ou Non et inclure le non </br>du Village
 			</div>
-			<div class="sondages_sep">&nbsp;</div>
 			
 		</div>
 		<div class="past_results">
 			<a href=""> Pour afficher plus de résultats, cliquez ici</a></p>
 		</div>
 	    <div id="footer">
-	    	<div class="sponsors_header" >
-	    		Partenaires		 
+	    	<div><div class="sponsors_header" >
+	    		Partenaires	
+	    		 
+			 
+			    	</div>
+
+
+Le partenariat avec des organisations ayant un large réseau de volontaires nationaux est la force motrice derrière Ureport Burundi.
+Durant les 6 derniers mois, l’équipe Ureport a travaillée en étroite collaboration avec les volontaires de la Croix Rouge, des Scouts et des 
+Guides de partout dans le pays pour identifier des options/caractéristiques de la plate-forme et des sujets clés pour des sondages. 
+Maintenant prêt pour lancer la phase pilote de Ureport Burundi…	
 	    	</div>
+	    	<p>
+	    	
+	    	
+	    	
+	    	
+	    	</p>
+	    	<div><div class="sponsors_header" >
+	    		campagne publique:
+	    		</div>
+	    		
+	    		Par un partage régulier de l'information sur des sujets sociaux importants, les Ureporters du Burundi ont démontré leur désir pour un changement positif; 
+	    		l'UNICEF et ses Partenaires sont à l’écoute et suivent attentivement. Les plates-formes de médias traditionnelles (la radio, les journaux et la télévision) joueront un rôle important en partageant  leurs idées et opinions à travers le pays, en commençant le jour du lancement public de la plate-forme Ureport en..... 	
+	    		 
+			 </div>
+			    	
 	      <div class="sponsors_logos">
 	           <img src="{{ STATIC_URL }}ureport/images/unicef_logo.png" alt="unicef logo" />
 	           <img src="{{ STATIC_URL }}ureport/images/gem_logo.png" alt="gem logo" />
@@ -88,7 +115,6 @@
 				forage ou de la communaute,est-il travailler </br>aujourd'hui?
 				OUI ou Non et inclure le non du Village <a href="">plus...</a>
 			</div>
-			<div class="activities_sep">&nbsp;</div>
 			
 		</div>
 	  </div>  
