--- a/templates/ureport/how_to_join.html
+++ b/templates/ureport/how_to_join.html
@@ -14,14 +14,14 @@
 {% block content %}
 
 <div class="how_to_join">
-	
-	
-	<h3 class="about_header">How To Report <img class="ab_img" src="{{ STATIC_URL }}images/shout_out.png"/></h3>
+
+   
+	<h2 class="about_header">Comment s’inscrire <img class="ab_img" src="{{ STATIC_URL }}images/shout_out.png"/></h2>
  
 	<div class="step_2 step">
 		<p class="step_txt"><span class="step_name">
 		Step 2 </span>
-		Des questions de sondage hebdomadaire sont envoyees aux Ureporters enregistres via leur telephone portable.
+		Tu recevras un message de salutation et une série de questions envoyées sur ton téléphone portable qui nous aideront à mieux analyser et localiser l'information que nous recevons. Ureport veut connaître ta commune, mais toutes les autres questions sont optionnelles
 
 		
 		</p>
@@ -32,8 +32,7 @@
 
     <div class="step_1 step">
 		<p class="step_txt"><span class="step_name" >Step 1 </span>
-		Un volontaire communautaire envoie par texto"REJOINDRE" au 132 et repond a une serie de questions pour devenir un Ureporter enregistre.
-		
+		 Écris le mot “S’inscrire” au 132. Tous les SMS de Ureport sont gratuits !
 
 		</p>
 		<img src="{{ STATIC_URL }}images/step1.png">
