--- a/templates/ureport_layout.html
+++ b/templates/ureport_layout.html
@@ -49,11 +49,11 @@
           	</div>
           	<div class="nav">
 		          <ul class="nav nav-pills">
-		          	<li class="active"><a href="/"><br />HOME</a></li>
-		  			<li class="active"><a href="/#poll_results/">POLL <br /> RESULTS </a></li>
-		  			<li class="active"><a href="/about_ureport/">ABOUT <br /> UREPORT</a></li>
-		  			<li class="active"><a href="/join/">HOW <br />TO JOIN</a></li>
-		  			<li class="active"><a href="/media/"><br />MEDIA</a></li>
+		          	<li class="active"><a href="/"><br />ACCUEIL</a></li>
+		  			<li class="active"><a href="/#poll_results/">RESULTATS<br />DES SONDAGES</a></li>
+		  			<li class="active"><a href="/about_ureport/">A PROPOS DE<br />UREPORT</a></li>
+		  			<li class="active"><a href="/join/">REJOINDRE<br/>UREPORT</a></li>
+		  			<li class="active"><a href="/media/"><br /> MEDIA </a></li>
 				  </ul> 
 		  	</div>
 	        <div class="ureporters_info">
@@ -67,9 +67,9 @@
         <div class="sidebar">
             {% block sidecontent %}
             <div class="intro">
-               Ureport est un logiciel gratuit basé sur des SMS qui permet aux jeunes Burundais à d’échanger sur ce qui se passe
-               dans les communautés à travers tout le pays, et de collaborer avec d'autres leaders de la communauté pour un changement positif. </p>
-            </div>
+               Ureport est une plate-forme de SMS gratuits qui permet aux citoyens 
+               de partager des informations et des opinions de leurs communautés et 
+               de travailler ensemble pour amener un changement positif </div>
             <div class="join">
                 <a href="/signup"> <img src="{{ STATIC_URL }}ureport/images/join_us_1.png" width="100%" /></a>
             </div>
@@ -95,10 +95,10 @@
             
             <div id="say">
             	<div class="say_header">
-            		Ton point de vue?<br />
+            		Sois impliqué <br />
             		<span>
-            			Ou est ce que les femmes de votre communauté vont avoir leurs consultations prénatales?
-            		</span>
+            			As-tu une bonne idée pour partager les informations de Ureport  avec les autres dans ta communauté? Peux-tu penser à une meilleure façon d'enregistrer les utilisateurs ou de partager les réponses des sondages?
+            			 Si oui, nous voulons t'entendre! Envoie-nous un email à ureportburundi@gmail.com et nous discuterons.</span>
             	</div>
             	<div class="separator">
             		&nbsp;
