--- a/templates/ureport/home.html
+++ b/templates/ureport/home.html
@@ -1,10 +1,11 @@
 {% extends "ureport_layout.html" %}
 
 {% block javascripts %}
+{{ block.super }}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js?1123"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}generic/javascripts/map.js"></script>
-    {{ block.super }}
+    
 {% endblock %}
 {% block top_js %}
     <script language="javascript">
@@ -33,7 +34,7 @@
 	
 	      </div>
 			<div class="sondages_header">
-			 	Sondages Top
+			 	Sondages Précédents
 			</div>
 			<div class="news_column">
 				<span> 16/Mar/2013 - <a href=""> voir les resultats</a></span><br />
@@ -48,7 +49,6 @@
 					forage ou de la communaute,est-il travailler aujourd'hui?
 					OUI ou Non et inclure le non </br>du Village
 			</div>
-			<div class="sondages_sep">&nbsp;</div>
 			
 		</div>
 		<div class="past_results">
@@ -88,7 +88,6 @@
 				forage ou de la communaute,est-il travailler </br>aujourd'hui?
 				OUI ou Non et inclure le non du Village <a href="">plus...</a>
 			</div>
-			<div class="activities_sep">&nbsp;</div>
 			
 		</div>
 	  </div>  
