--- a/templates/ureport_layout.html
+++ b/templates/ureport_layout.html
@@ -49,10 +49,10 @@
           	</div>
           	<div class="nav">
 		          <ul class="nav nav-pills">
-		          	<li class="active"><a href="/"><br />HOME</a></li>
-		  			<li class="active"><a href="/#poll_results/">POLL <br /> RESULTS </a></li>
-		  			<li class="active"><a href="/about_ureport/">ABOUT <br /> UREPORT</a></li>
-		  			<li class="active"><a href="/join/">HOW <br />TO JOIN</a></li>
+		          	<li class="active"><a href="/"><br />ACCUEIL</a></li>
+		  			<li class="active"><a href="/#poll_results/">RÉSULTAT<br />SONDAGES </a></li>
+		  			<li class="active"><a href="/about_ureport/">À PROPOS<br />DE UREPORT</a></li>
+		  			<li class="active"><a href="/join/">COMMENT<br />PARTICIPER</a></li>
 		  			<li class="active"><a href="/media/"><br />MEDIA</a></li>
 				  </ul> 
 		  	</div>
@@ -95,9 +95,10 @@
             
             <div id="say">
             	<div class="say_header">
-            		Ton point de vue?<br />
+            		Ton point de vue ?<br />
             		<span>
-            			Ou est ce que les femmes de votre communauté vont avoir leurs consultations prénatales?
+            			Où est ce que les femmes de votre communauté vont 
+            			avoir leurs consultations prénatales?
             		</span>
             	</div>
             	<div class="separator">
@@ -105,7 +106,8 @@
             	</div>
             	<div class="sayit">
             		<span>
-            			Dans notre communaute,nous n'avons pas de centre de sante,mais nous en avons une a Muzye a peu pres 25km de notre Village
+            			Dans notre communauté,nous n'avons pas de centre de santé,
+            			mais nous en avons une à Muzye à peu près 25km de notre Village
             		</span><br /><br />
             		<span class="sayit_author">
             			- Geoffery, Lira uReporter.
