separated settings and styles fixes

--- a/staticfiles/ureport/stylesheets/ureport_home.css
+++ b/staticfiles/ureport/stylesheets/ureport_home.css
@@ -248,7 +248,7 @@ div.why-placeholder span {
 .footerlinks {
     text-align:center;
     width:100%;
-    background-color: #797979;
+    background-color: #0076ad;
     color: white;
     float:left;
     height:100%;
